--- a/static/scss/styles.css
+++ b/static/scss/styles.css
@@ -3,6 +3,7 @@
   margin: 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  font-family: 'Noto Sans JP', sans-serif;
 }
 
 html,
@@ -22,75 +23,11 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  padding: 1em;
+  overflow: hidden;
 }
 
 .contenedorPadre header {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  color: #dbd8e3;
-  width: 100%;
-  height: 20%;
-}
-
-.contenedorPadre header h1 {
-  color: #ffc045;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
-
-.contenedorPadre header ul {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-.contenedorPadre header ul li {
-  list-style-type: none;
-  margin: 0 1em;
-}
-
-.contenedorPadre header ul li a {
-  font-family: monospace;
-  font-size: 1.3em;
-  text-decoration: none;
-  color: #dbd8e3;
-}
-
-.contenedorPadre header ul li a:hover {
-  cursor: pointer;
-  text-decoration: underline;
-}
-
-.contenedorPadre main {
-  width: 100%;
-  height: 75%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-}
-
-.contenedorPadre main .formulario {
-  width: 50%;
-  height: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -98,85 +35,33 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -webkit-box-pack: left;
+      -ms-flex-pack: left;
+          justify-content: left;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  position: relative;
-}
-
-.contenedorPadre main .formulario .cajaTexto {
-  resize: none;
+  color: #dbd8e3;
   width: 100%;
-  height: 100%;
-  padding: 1em;
-  font-size: 1.4em;
-  background: transparent;
-  color: #dbd8e3;
-  border: 3px solid #393e46;
-  border-radius: 6px;
-  outline: none;
-}
-
-.contenedorPadre main .formulario .comprobarBoton {
-  position: absolute;
-  top: 0;
-  right: 0;
-  border-radius: 6px;
-  font-size: 1.2em;
   height: 10%;
-  width: 20%;
-  border: none;
-  color: #dbd8e3;
-  cursor: pointer;
-  background: #482f7a;
-  outline: none;
 }
 
-.contenedorPadre main .formulario .comprobarBoton:hover {
-  background: #50368d;
-}
-
-.contenedorPadre main #log {
-  width: 50%;
-  height: 100%;
-  border-radius: 6px;
-  border: 2.2px solid #393e46;
+.contenedorPadre main {
+  width: 100%;
+  height: 85%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  padding: 1em;
-  overflow-y: auto;
-}
-
-.contenedorPadre main #log legend {
-  margin-left: 1em;
-  font-size: 24px;
-  font-family: monospace;
-  color: #dbd8e3;
-}
-
-.contenedorPadre main #log .textLog {
-  font-family: 'Courier New', Courier, monospace;
-  font-size: 18px;
-  color: #dbd8e3;
-}
-
-.contenedorPadre main #log .error {
-  margin: 2px 0;
-  font-weight: 500;
-  color: #f2f2f2;
-  background: -webkit-gradient(linear, left top, right top, from(#c03e3e), to(#c03e3e));
-  background: linear-gradient(90deg, #c03e3e, #c03e3e);
-  border-radius: 3px;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  position: relative;
 }
 
 .contenedorPadre footer {
@@ -202,6 +87,151 @@ body {
   color: #dbd8e3;
 }
 
+.boton_icono {
+  -webkit-box-shadow: rgba(53, 53, 53, 0.16) 0px 3px 6px, rgba(29, 29, 29, 0.23) 0px 3px 6px;
+          box-shadow: rgba(53, 53, 53, 0.16) 0px 3px 6px, rgba(29, 29, 29, 0.23) 0px 3px 6px;
+  margin: 1em;
+  width: 9em;
+  height: 2em;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: relative;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.boton_icono .boton {
+  border-radius: 6px;
+  padding: 2px;
+  font-size: 0.95em;
+  height: 100%;
+  width: 100%;
+  border: none;
+  color: #dbd8e3;
+  cursor: pointer;
+  outline: none;
+}
+
+.boton_icono .boton_primario {
+  font-weight: 500;
+  background: #5838a1;
+}
+
+.boton_icono .boton_primario:hover {
+  background: #462497;
+}
+
+.boton_icono .boton_secundario {
+  font-weight: 300;
+  background: #4a47a3;
+}
+
+.boton_icono .boton_secundario:hover {
+  background: #6c50ac;
+}
+
+.formulario {
+  width: 100%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  position: relative;
+  -webkit-box-shadow: rgba(51, 13, 66, 0.16) 0px 3px 6px, #321b3f3b 0px 3px 6px;
+          box-shadow: rgba(51, 13, 66, 0.16) 0px 3px 6px, #321b3f3b 0px 3px 6px;
+}
+
+.formulario .cajaTexto {
+  resize: none;
+  width: 100%;
+  height: 100%;
+  padding: 1em;
+  font-size: 1.25em;
+  background: #272529cc;
+  background: linear-gradient(45deg, #272529cc 0%, #1b152f8a 100%);
+  color: #ffc045;
+  border: none;
+  border-radius: 8px;
+  outline: none;
+}
+
+.formulario .cajaTexto .color_tipoDato {
+  color: #845ec2;
+}
+
+#log {
+  width: 100%;
+  height: 50%;
+  border-radius: 6px;
+  border: 2px solid #32043a67;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding: 1em;
+  position: absolute;
+  overflow-y: auto;
+  bottom: 0;
+  background: #1812206e;
+  -webkit-transition: all ease 1s;
+  transition: all ease 1s;
+}
+
+#log legend {
+  margin-left: 1em;
+  font-size: 24px;
+  font-family: monospace;
+  color: #dbd8e3;
+}
+
+#log .textLog {
+  font-family: 'Courier New', Courier, monospace;
+  font-size: 18px;
+  color: #dbd8e3;
+}
+
+#log .error {
+  margin: 2px 0;
+  font-weight: 500;
+  color: #f2f2f2;
+  background: -webkit-gradient(linear, left top, right top, from(#c03e3e), to(#c03e3e));
+  background: linear-gradient(90deg, #c03e3e, #c03e3e);
+  border-radius: 3px;
+}
+
+.hideBox {
+  -webkit-transition: all ease 1s;
+  transition: all ease 1s;
+  -webkit-transform: translateY(200%);
+          transform: translateY(200%);
+}
+
+.reduce50 {
+  -webkit-transition: all ease 1s;
+  transition: all ease 1s;
+  height: 50%;
+}
+
 @media screen and (max-width: 1000px) {
   .contenedorPadre main {
     -webkit-box-orient: horizontal;
@@ -211,7 +241,7 @@ body {
   }
   .contenedorPadre main .formulario {
     width: 90%;
-    height: 50%;
+    height: 100%;
   }
   .contenedorPadre main .formulario .comprobarBoton {
     height: 20%;
@@ -245,7 +275,7 @@ body {
     font-size: 1.5em;
   }
   .contenedorPadre header ul {
-    font-size: .8em;
+    font-size: 0.8em;
   }
 }
 /*# sourceMappingURL=styles.css.map */
