--- a/static/scss/styles.css
+++ b/static/scss/styles.css
@@ -170,10 +170,11 @@ body {
   border: none;
   border-radius: 8px;
   outline: none;
+  overflow-y: auto;
 }
 
 .formulario .cajaTexto .color_tipoDato {
-  color: #845ec2;
+  color: #6cca14;
 }
 
 #log {
@@ -193,6 +194,7 @@ body {
   overflow-y: auto;
   bottom: 0;
   background: #1812206e;
+  overflow-y: auto;
   -webkit-transition: all ease 1s;
   transition: all ease 1s;
 }
