--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../static/scss/styles.css">
+    <link rel="shortcut icon" href="../static/svg/favicon.svg" type="image/x-icon">
     <link rel="shortcut icon" href="{{url_for('static' , filename='svg/favicon.svg')}}" type="image/x-icon" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;300;400;500;700;900&display=swap"
@@ -45,7 +47,7 @@
             <!-- <p class="author">Grupo 3</p> -->
         </footer>
     </div>
-
+    <script src="../static/js/index.js"></script>
     <script src="{{url_for('static' , filename='js/index.js')}}"></script>
 </body>
 
