Cambiando el proyecto a la rama estable

--- a/static/scss/_formulario.scss
+++ b/static/scss/_formulario.scss
@@ -20,10 +20,9 @@
         border: none;
         border-radius: 8px;
         outline: none;
-        overflow-y: auto;
         
         .color_tipoDato{
-            color: #6cca14;
+            color: #845ec2;
         }
      
     }
@@ -44,7 +43,6 @@
     overflow-y: auto;
     bottom: 0;
     background: #1812206e;
-    overflow-y:auto ;
     legend {
         margin-left: 1em;
         font-size: 24px;
