Coloca el numero de lineas, coloca un fondo degradado a lineas pares"

--- a/templates/index.html
+++ b/templates/index.html
@@ -31,11 +31,13 @@
         <main>
             <div id="formularioInput" class="formulario">
                 <!-- <textarea id="textAreaInput" class="cajaTexto"></textarea> -->
-                <div id='textAreaInput' class="cajaTexto" role="textbox" contenteditable> </div>
-
+                <div class="identador">  01 </div> 
+                <div id='textAreaInput' class="cajaTexto" role="textbox" contenteditable> 
+                </div>
+                
             </div>
 
-            <fieldset id="log" class="">
+            <fieldset id="log" class="hideBox">
 
             </fieldset>
         </main>
