--- a/static/scss/_formulario.scss
+++ b/static/scss/_formulario.scss
@@ -1,4 +1,6 @@
 .formulario {
+ 
+    word-wrap: break-word;
     width: 100%;
     height: 100%;
     display: flex;
@@ -9,10 +11,12 @@
     position: relative;
     box-shadow: rgba(51, 13, 66, 0.16) 0px 3px 6px, #321b3f3b 0px 3px 6px;
     .cajaTexto {
+        overflow: auto;
         resize: none;
         width: 100%;
         height: 100%;
         padding: 1em;
+        padding-left: 2em;
         font-size: 1.25em;
         background: #272529cc;
         background: linear-gradient(45deg, #272529cc 0%, #1b152f8a 100%);
@@ -27,11 +31,26 @@
      
     }
    
+    .identador{
+        box-sizing: border-box;
+        width: 30px;
+        height: 100%;
+        background-color: #1a191bcc;
+        // border: 2px solid $rojo;
+        overflow: hidden;
+        position: absolute;
+        left: 0;
+        padding-left: 4px;
+        color: #b8a6933d;
+        font-size: 1.25em;
+        padding-top: 1em;
 
+    }
 }
 
 
 #log {
+    word-wrap: break-word;
     width: 100%;
     height: 50%;
     border-radius: 6px;
@@ -40,7 +59,7 @@
     flex-direction: column;
     padding: 1em;
     position: absolute;
-    overflow-y: auto;
+    overflow: auto;
     bottom: 0;
     background: #1812206e;
     legend {
@@ -71,4 +90,13 @@
 .reduce50{
     transition: all ease 1s;
     height: 50%;
+}
+
+.lineBoxShape {
+    &:nth-child(odd){
+        border-radius: 6px;
+        // background: linear-gradient(45deg #1a191b6b , transparent);
+        background: linear-gradient(45deg,  transparent , #c03e3e3d , #8a35e03d );
+    }
+    
 }
