--- a/static/scss/styles.css
+++ b/static/scss/styles.css
@@ -136,6 +136,7 @@ body {
 }
 
 .formulario {
+  word-wrap: break-word;
   width: 100%;
   height: 100%;
   display: -webkit-box;
@@ -159,10 +160,12 @@ body {
 }
 
 .formulario .cajaTexto {
+  overflow: auto;
   resize: none;
   width: 100%;
   height: 100%;
   padding: 1em;
+  padding-left: 2em;
   font-size: 1.25em;
   background: #272529cc;
   background: linear-gradient(45deg, #272529cc 0%, #1b152f8a 100%);
@@ -176,7 +179,23 @@ body {
   color: #845ec2;
 }
 
+.formulario .identador {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  width: 30px;
+  height: 100%;
+  background-color: #1a191bcc;
+  overflow: hidden;
+  position: absolute;
+  left: 0;
+  padding-left: 4px;
+  color: #b8a6933d;
+  font-size: 1.25em;
+  padding-top: 1em;
+}
+
 #log {
+  word-wrap: break-word;
   width: 100%;
   height: 50%;
   border-radius: 6px;
@@ -190,7 +209,7 @@ body {
           flex-direction: column;
   padding: 1em;
   position: absolute;
-  overflow-y: auto;
+  overflow: auto;
   bottom: 0;
   background: #1812206e;
   -webkit-transition: all ease 1s;
@@ -230,6 +249,11 @@ body {
   -webkit-transition: all ease 1s;
   transition: all ease 1s;
   height: 50%;
+}
+
+.lineBoxShape:nth-child(odd) {
+  border-radius: 6px;
+  background: linear-gradient(45deg, transparent, #c03e3e3d, #8a35e03d);
 }
 
 @media screen and (max-width: 1000px) {
