--- a/templates/index.html
+++ b/templates/index.html
@@ -37,7 +37,12 @@
                 
             </div>
 
-            <fieldset id="log" class="hideBox">
+            <!-- <fieldset id="log" class="hideBox"> -->
+            <fieldset id="log" class="">
+                <!-- <label for="" class="textLog error">Mensaje Error </label> -->
+                <!-- <label for="" class="textLog info"> Mensaje info </label> -->
+                <!-- <label for="" class="textLog warn"> Mensaje warn </label> -->
+                <!-- <label for="" class="textLog"> Mensaje normal</label> -->
 
             </fieldset>
         </main>
