--- a/static/scss/styles.css
+++ b/static/scss/styles.css
@@ -155,8 +155,8 @@ body {
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   position: relative;
-  -webkit-box-shadow: rgba(51, 13, 66, 0.16) 0px 3px 6px, #321b3f3b 0px 3px 6px;
-          box-shadow: rgba(51, 13, 66, 0.16) 0px 3px 6px, #321b3f3b 0px 3px 6px;
+  -webkit-box-shadow: #330d4229 0px 3px 6px, rgba(51, 28, 64, 0.231) 0px 3px 6px;
+          box-shadow: #330d4229 0px 3px 6px, rgba(51, 28, 64, 0.231) 0px 3px 6px;
 }
 
 .formulario .cajaTexto {
@@ -168,7 +168,7 @@ body {
   padding-left: 2em;
   font-size: 1.25em;
   background: #272529cc;
-  background: linear-gradient(45deg, #272529cc 0%, #1b152f8a 100%);
+  background: linear-gradient(45deg, #262428cc, #1b152f8a);
   color: #ffc045;
   border: none;
   border-radius: 8px;
@@ -264,13 +264,14 @@ body {
   height: 50%;
 }
 
-.lineBoxShape:nth-child(odd) {
-  border-radius: 6px;
-  background: linear-gradient(45deg, transparent, #c03e3e25, #8a35e025);
+.lineBoxShape:hover {
+  -webkit-filter: brightness(1.25);
+          filter: brightness(1.25);
 }
 
-.lineBoxShape:focus-within {
-  background: red;
+.lineBoxShape:nth-child(odd) {
+  border-radius: 6px;
+  background: linear-gradient(45deg, transparent, #c03e3e25, #8a35e025, transparent);
 }
 
 @media screen and (max-width: 1000px) {
