--- a/templates/index.html
+++ b/templates/index.html
@@ -38,7 +38,7 @@
             </div>
 
             <!-- <fieldset id="log" class="hideBox"> -->
-            <fieldset id="log" class="">
+            <fieldset id="log" class="hideBox">
                 <!-- <label for="" class="textLog error">Mensaje Error </label> -->
                 <!-- <label for="" class="textLog info"> Mensaje info </label> -->
                 <!-- <label for="" class="textLog warn"> Mensaje warn </label> -->
