--- a/AnalizadorSintactico/static/scss/_formulario.scss
+++ b/AnalizadorSintactico/static/scss/_formulario.scss
@@ -1,4 +1,6 @@
 .formulario {
+ 
+    word-wrap: break-word;
     width: 100%;
     height: 100%;
     display: flex;
@@ -7,15 +9,17 @@
     align-items: center;
     flex-wrap: wrap;
     position: relative;
-    box-shadow: rgba(51, 13, 66, 0.16) 0px 3px 6px, #321b3f3b 0px 3px 6px;
+    box-shadow: #330d4229 0px 3px 6px, hsla(278, 40%, 18%, 0.231) 0px 3px 6px;
     .cajaTexto {
+        overflow: auto;
         resize: none;
         width: 100%;
         height: 100%;
         padding: 1em;
+        padding-left: 2em;
         font-size: 1.25em;
         background: #272529cc;
-        background: linear-gradient(45deg, #272529cc 0%, #1b152f8a 100%);
+        background: linear-gradient(45deg, #262428cc , #1b152f8a );
         color: $amarillo;
         border: none;
         border-radius: 8px;
@@ -27,11 +31,26 @@
      
     }
    
+    .identador{
+        box-sizing: border-box;
+        width: 30px;
+        height: 100%;
+        background-color: #1a191bcc;
+        // border: 2px solid $rojo;
+        overflow: hidden;
+        position: absolute;
+        left: 0;
+        padding-left: 4px;
+        color: #b8a6933d;
+        font-size: 1.25em;
+        padding-top: 1em;
 
+    }
 }
 
 
 #log {
+    word-wrap: break-word;
     width: 100%;
     height: 50%;
     border-radius: 6px;
@@ -40,7 +59,7 @@
     flex-direction: column;
     padding: 1em;
     position: absolute;
-    overflow-y: auto;
+    overflow: auto;
     bottom: 0;
     background: #1812206e;
     legend {
@@ -51,15 +70,28 @@
     }
 
     .textLog {
-        font-family: 'Courier New', Courier, monospace;
+        font-family:  monospace;
         font-size: 18px;
         color: $white;
     }
     .error {
         margin: 2px 0;
+        font-weight: 600;
+        color: #c03e3e;
+        border-radius: 3px;
+        
+    }
+    .info{
+        margin: 2px 0;
+        font-weight: 300;
+        color: #4184ffad;
+        font-style: italic;
+        border-radius: 3px;
+    }
+    .warn{
+        margin: 2px 0;
         font-weight: 500;
-        color: #f2f2f2;
-        background: linear-gradient(90deg, $rojo, #c03e3e);
+        color: #d4b814ad;
         border-radius: 3px;
     }
     transition: all ease 1s;
@@ -71,4 +103,19 @@
 .reduce50{
     transition: all ease 1s;
     height: 50%;
+}
+
+.lineBoxShape {
+    &:hover{
+        filter: brightness(1.25);
+    }
+    &:nth-child(odd){
+        border-radius: 6px;
+        background: linear-gradient(45deg,  transparent , #c03e3e25 , #8a35e025   , transparent );
+    }
+    &:nth-child( even ){
+
+    }
+    
+    
 }
