--- a/AnalizadorSintactico/templates/index.html
+++ b/AnalizadorSintactico/templates/index.html
@@ -46,6 +46,7 @@
         </footer>
     </div>
 
+    <script src="{{url_for('static' , filename='js/intermedio.js')}}"></script>
     <script src="{{url_for('static' , filename='js/index.js')}}"></script>
 </body>
 
