--- a/AnalizadorSintactico/templates/index.html
+++ b/AnalizadorSintactico/templates/index.html
@@ -30,14 +30,24 @@
 
         <main>
             <div id="formularioInput" class="formulario">
-                <!-- <textarea id="textAreaInput" class="cajaTexto"></textarea> -->
+                <div class="identador"></div>
                 <div id='textAreaInput' class="cajaTexto" role="textbox" contenteditable> </div>
 
             </div>
+            <div id="consola_codigoP">
 
-            <fieldset id="log" class="">
+                <fieldset id="log" class=""> 
+                 <!-- <label for="" class="textLog error">Mensaje Error </label> 
+                 <label for="" class="textLog info"> Mensaje info </label> 
+                 <label for="" class="textLog warn"> Mensaje warn </label> 
+                 <label for="" class="textLog"> Mensaje normal</label>  -->
+                </fieldset>
+                <fieldset id="area_codido_p" class=""> 
+                    <label for="" class="texto">  </label> 
 
-            </fieldset>
+                </fieldset>
+            </div>
+
         </main>
         <footer>
             <!-- <p class="author"></p> -->
