--- a/AnalizadorSintactico/static/scss/styles.css
+++ b/AnalizadorSintactico/static/scss/styles.css
@@ -136,6 +136,7 @@ body {
 }
 
 .formulario {
+  word-wrap: break-word;
   width: 100%;
   height: 100%;
   display: -webkit-box;
@@ -154,31 +155,84 @@ body {
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   position: relative;
-  -webkit-box-shadow: rgba(51, 13, 66, 0.16) 0px 3px 6px, #321b3f3b 0px 3px 6px;
-          box-shadow: rgba(51, 13, 66, 0.16) 0px 3px 6px, #321b3f3b 0px 3px 6px;
+  -webkit-box-shadow: #330d4229 0px 3px 6px, rgba(51, 28, 64, 0.231) 0px 3px 6px;
+          box-shadow: #330d4229 0px 3px 6px, rgba(51, 28, 64, 0.231) 0px 3px 6px;
 }
 
 .formulario .cajaTexto {
+  overflow: auto;
   resize: none;
   width: 100%;
   height: 100%;
   padding: 1em;
+  padding-left: 2em;
   font-size: 1.25em;
   background: #272529cc;
-  background: linear-gradient(45deg, #272529cc 0%, #1b152f8a 100%);
+  background: linear-gradient(45deg, #262428cc, #1b152f8a);
   color: #ffc045;
   border: none;
   border-radius: 8px;
   outline: none;
+  cursor: pointer;
 }
 
 .formulario .cajaTexto .color_tipoDato {
   color: #845ec2;
 }
 
-#log {
+.formulario .identador {
+  width: 30px;
+  height: 100%;
+  background-color: #1a191bcc;
+  overflow: hidden;
+  position: absolute;
+  left: 0;
+}
+
+#consola_codigoP {
   width: 100%;
   height: 50%;
+  position: absolute;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  bottom: 0;
+  -webkit-transition: all ease 1s;
+  transition: all ease 1s;
+}
+
+#consola_codigoP #area_codido_p {
+  word-wrap: break-word;
+  width: 50%;
+  height: 100%;
+  border-radius: 6px;
+  border: 2px solid #09043a67;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding: 1em;
+  overflow: auto;
+  background: #48496e6e;
+}
+
+#consola_codigoP #area_codido_p .texto {
+  font-family: monospace;
+  font-size: 18px;
+  color: #dbd8e3;
+}
+
+#consola_codigoP #log {
+  word-wrap: break-word;
+  width: 50%;
+  height: 100%;
   border-radius: 6px;
   border: 2px solid #32043a67;
   display: -webkit-box;
@@ -189,33 +243,35 @@ body {
       -ms-flex-direction: column;
           flex-direction: column;
   padding: 1em;
-  position: absolute;
-  overflow-y: auto;
-  bottom: 0;
+  overflow: auto;
   background: #1812206e;
-  -webkit-transition: all ease 1s;
-  transition: all ease 1s;
 }
 
-#log legend {
-  margin-left: 1em;
-  font-size: 24px;
+#consola_codigoP #log .textLog {
   font-family: monospace;
-  color: #dbd8e3;
-}
-
-#log .textLog {
-  font-family: 'Courier New', Courier, monospace;
   font-size: 18px;
   color: #dbd8e3;
 }
 
-#log .error {
+#consola_codigoP #log .error {
+  margin: 2px 0;
+  font-weight: 600;
+  color: #c03e3e;
+  border-radius: 3px;
+}
+
+#consola_codigoP #log .info {
+  margin: 2px 0;
+  font-weight: 300;
+  color: #4184ffad;
+  font-style: italic;
+  border-radius: 3px;
+}
+
+#consola_codigoP #log .warn {
   margin: 2px 0;
   font-weight: 500;
-  color: #f2f2f2;
-  background: -webkit-gradient(linear, left top, right top, from(#c03e3e), to(#c03e3e));
-  background: linear-gradient(90deg, #c03e3e, #c03e3e);
+  color: #d4b814ad;
   border-radius: 3px;
 }
 
@@ -230,6 +286,15 @@ body {
   -webkit-transition: all ease 1s;
   transition: all ease 1s;
   height: 50%;
+}
+
+.lineBoxShape:hover {
+  -webkit-filter: brightness(1.75);
+          filter: brightness(1.75);
+}
+
+.lineBoxShape:nth-child(odd) {
+  background: linear-gradient(45deg, transparent, #c03e3e25, #8a35e025, transparent);
 }
 
 @media screen and (max-width: 1000px) {
@@ -278,3 +343,4 @@ body {
     font-size: 0.8em;
   }
 }
+/*# sourceMappingURL=styles.css.map */
